[package]
name = "psp"
version = "0.3.7"
description = "A library for building full PSP modules, including both PRX plugins and regular homebrew apps."
readme = "../README.md"
repository = "https://github.com/overdrivenpotato/rust-psp"
license = "MIT"
authors = [
    "Marko Mijalkovic <marko.mijalkovic97@gmail.com>",
    "Paul Sajna <sajattack@gmail.com>"
]
edition = "2018"
build = "build.rs"

[features]
default = ["vfpu", "libm", "sys-stubs", "extras", "num_enum", "panic"]
vfpu = ["unstringify"]
# Implement stubs for PSP APIs
# Exactly one instance of psp in a given binary needs to have this enabled,
# since it creates global symbols.
sys-stubs = []
# Also provide code other than PSP API declarations
extras = []
num_enum = ["dep:num_enum", "num_enum_derive"]
panic = []
std = []

# Only used by std itself
rustc-dep-of-std = ["core", "compiler_builtins", "bitflags/rustc-dep-of-std", "cfg-if/rustc-dep-of-std"]

[dependencies]
paste = "1.0.14"
bitflags = "2.4.2"
cfg-if = "1.0"
libm = { version = "0.2.1", optional = true }
embedded-graphics = { version = "0.7.1", optional = true, features = ["fixed_point"] }
unstringify = { version = "0.1.4", optional = true }
num_enum = { version = "0.7.2", optional = true, default-features = false }
num_enum_derive = { version = "0.7.2", optional = true, default-features = false }

core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.2", optional = true }
